--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "es.jacksparrot.utils",
   "version": "1.0.0",
   "displayName": "jacksparrot Utils",
-  "description": "Utility tools such as updater, deterministic random or time utils",
+  "description": "Utility tools such as updater, deterministic random, time utils and scene management",
   "unity": "2018.1",
   "unityRelease": "0f1",
   "dependencies": {
@@ -13,6 +13,6 @@
   "author": {
     "name": "Francisco Ruiz",
     "email": "franciscoruizpons@gmail.com",
-    "url": ""
+    "url": "https://github.com/JackSParrot/utils-pkg"
   } 
 }
