--- a/Runtime/JackSParrotUtils.Runtime.asmdef
+++ b/Runtime/JackSParrotUtils.Runtime.asmdef
@@ -12,7 +12,8 @@
         "GUID:5540e30183c82e84b954c033c388e06c",
         "GUID:30e7a851ec87b44ad956804ca8ebf15c",
         "GUID:9d6c7830d9ab746a7a12f144bdeeee7c",
-        "GUID:1fc8ede7ec01a445f8409d5206ec4755"
+        "GUID:1fc8ede7ec01a445f8409d5206ec4755",
+        "GUID:ff6de30450f3748908ff580f6ec64d9a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
